# st_nca

./: PEMS04.ipynb  PEMS08.ipynb  README.md  Spatial_embedding_attention_transformer_final.ipynb  experiments.ipynb  finetunning.ipynb  pyproject.toml  requirements.txt  requiretments.txt  rungnca.py  test.py
data/PEMS03/: nodes.csv
data/PEMS04/: edges.csv
notebooks/: Spatio_Temporal_Traffic_Forecasting_with_Neural_Graph_Cellular_Automata.ipynb
st_nca/: cellmodel.py  common.py  data.py  datasets.py  evaluate.py  finetune.py  gca.py  pretrain.py  tokenizer.py
st_nca/centralized_pretrain/: CentralizedFineTune.py  CentralizedSSLPreTrain.py  run.py
st_nca/data/PEMS-BAY/: edges.csv  nodes.csv
st_nca/data/PEMS03/: edges.csv
st_nca/data/PEMS04/: edges.csv
st_nca/data/PEMS08/: edges.csv
st_nca/datasets/: PEMS.py  datasets.py
st_nca/distributed_inference/: ddp.py
st_nca/embeddings/: normalization.py  scaling.py  spatial.py  temporal.py  value.py
st_nca/federated_pretrain/: CellModel.py  CentralizedSSLPreTrain.py  FederatedSSLPreTrain.py  PEMS03Dataset.py  PEMSDataset.py  requirements.txt  run.py
st_nca/modules/: lsh.py  moe.py  transformers.py
st_nca/notebooks/: Legacy.ipynb  PEMS08.ipynb  experiments.ipynb  finetunning.ipynb  tokenizer.py
st_nca/weights/PEMS03/: PEMS03_cell_model_2_4_256_2_256_20241214.pt  UlGfLpFGDbWjtwcWVn59C_weights.h5  Z9u8bjYq7SBqXzWkvtrNd_cell_model_2_8_512_2_512.h5  cell_model_1_16_1024_1_1024.pt  (+8 more)
weights/PEMS03/: cell_model_2_4_256_2_256.pt  cell_model_4_16_1024_2_1024.pt  cell_model_4_16_512_2_1024.pt  gca_2_4_256_2_256.pt
(+1 files in other folders)
